# Contrarian_Analysis_NewsArticles

./: Final_Project_BAX423.docx  README.md
Contrarian_Identification_Summary/: Contrarian_Logic_Summary.docx  apple_contraian.ipynb  exxonmboil_contrarian.ipynb  nvidia_contrarian.ipynb  pfizer_contrarian.ipynb  walmart_contrarian.ipynb
EarningsDateExtractorSEC/: EarningsDateExtractor.docx  EarningsDateExtractorSECFilings.ipynb  GetCIK_Symbols.ipynb  Getting_Earnings_datesYFinance.ipynb  Scrape_nasdaq_WebPage.py
Extract_Name_Sentiment_Relevancy/: Author_Sentiment_Relevance.py  Author_sentiment_relevancy.docx  LangChain_SentimentAnalysis.docx  Test7.py
Extract_NewsArticle_HeadBody/: ExtractNewsHeadBody.docx  StockNewsApi_2022_25.ipynb
LangChain_SentimentAnalysis/LangChain_SentimentAnalysis_MyWork/: LangchainVf.ipynb  pyproject.toml
LangChain_SentimentAnalysis/LangChain_Tutorial/: pyproject.toml  test.ipynb
LangChain_SentimentAnalysis/LangChain_Tutorial/langchain-course/chapters/: 01-intro.ipynb  05-agents-intro.ipynb
Llama3_Sentiment_Analysis/: Llama3_Sentiment_Analysis.docx  Sentiment analysis using lama.ipynb
Scraping_GetNewsArticles/: Scraping_GetNewsArticles.docx  apple_Gizmodo_articles_with_body_2.xlsx  apple_Verge_articles_with_body_2.xlsx  apple_Wired_articles_with_body_2.xlsx  newsapi_Code_Gizmodo.ipynb  newsapi_Code_Verge.ipynb  newsapi_Code_Wired.ipynb
