[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-openai>=0.3.18",
    "pip>=25.1.1",
]
